--- a/src/components/Page/LP/SectionOne/style.module.css
+++ b/src/components/Page/LP/SectionOne/style.module.css
@@ -1,4 +1,15 @@
-.size {
-  width: 100%;
+.wrap {
+  position: relative;
+  width: 100vw;
   height: 100vh;
+}
+
+.header {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
 }
