--- a/src/components/Page/LP/SectionOne/style.module.css
+++ b/src/components/Page/LP/SectionOne/style.module.css
@@ -1,5 +1,4 @@
 .wrap {
-  position: relative;
   width: 100vw;
   height: 100vh;
 }
@@ -7,9 +6,16 @@
 .header {
   position: absolute;
   z-index: 10;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0;
+  right: 2vw;
+  top: 2vw;
+}
+
+.button {
+  font-weight: bold;
+  border: 1px solid #222;
+  padding: 0 10px;
+}
+
+.button:hover {
+  cursor: pointer;
 }
